custom-styles/style.scss
html {
  font-family: "Inter", sans-serif;
  scroll-behavior: smooth;
}

  .header {
  &-nav {
    ul > li {
      position: relative;

      // background: green;

      &.active-link::after,
      &::after {
        content: "";
        display: block;
        height: 2px;
        width: 29px;
        border-radius: 100px;
        background: #fdb022;

        position: absolute;
        bottom: -2px;

        transform-origin: bottom left;
        transition: transform 0.3s ease;
      }

      &.active-link {
        position: relative;
        // background: red;

        &::after {
          transform: scaleX(1);
        }
      }

      &::after {
        transform: scaleX(0);
      }

      &:hover::after {
        transform: scaleX(1);
      }

      &.active-link {
        transform: scaleX(1);
      }
    }
  }
}

.hero {
  position: relative;

  &::after {
    content: "";
    width: 100%;
    height: 100%;
    z-index: -1;
    background: #101323;

    position: absolute;
    left: 0;
    top: 0;
    // border: 1px solid yellow;
  }
  // height: 100%;
  // border: 3px solid green;
  // min-height: 100vh;
  // margin-top: 5rem;
  // padding-top: 3rem;

  @media screen and (max-width: 800px) {
    padding-bottom: 5rem;
  }

  .hero-img-wrapper {
    @media screen and (min-width: 800px) {
      //   width: 50%;
    }

    .hero-img {
      padding: 3rem inherit;
      padding-bottom: 3rem;

      @media screen and (min-width: 800px) {
        display: block;
        // width: 200%;
        transform: scale(2);
        position: relative;
        left: -30%;

        z-index: 0;
      }
    }
  }
}

.why-creduss-swiper {
  // background: yellow;
  // min-height: 100vh;

  .mySwiper {
    // background: green;
    position: relative;
    // height: 100%;

    // overflow: visible;

    padding: 2rem 1rem;
    padding-bottom: 3.5rem;

    .swiper-slide {
      background: linear-gradient(
        270deg,
        rgba(255, 255, 255, 0.5) 8.03%,
        #fff 57.24%
      );
      position: relative;
      // padding: 1rem;
      display: flex;
      // align-items: center;
      justify-content: center;
      flex-direction: column;
      gap: 27px;

      border-radius: 1.35394rem;

      // background: blue;
      // padding: 40px;
      padding-top: 40px;
      padding-left: 40px;
      padding-right: 15px;
      padding-bottom: 15px;

      margin: 0px;
      box-sizing: border-box;

      .swiper-img {
        img {
          width: 100%;
          height: 100%;
        }
      }

      @media screen and (min-width: 768px) {
        flex-direction: row;
      }
    }

    .swiper-button-prev,
    .swiper-button-next {
      background: #fdb022;
      width: 2rem;
      height: 2rem;
      border-radius: 100%;

      right: -20px;
      // top: 50%;
      // transform: translateY(-50%);

      &::after {
        font-size: 0.75rem;
        font-weight: 700;
        color: #fff;
        // height: 20%;
      }

      @media screen and (max-width: 768px) {
        display: none;
      }
    }
    .swiper-button-prev {
      left: 0;
    }
    .swiper-button-next {
      right: 0;
    }

    .swiper-pagination {
      // border: 1px solid white;
      // margin-top: 1rem;
      // height: 40px;

      .swiper-pagination-bullet {
        background: #fdb022;
      }
    }

    @media screen and (min-width: 768px) {
      padding-left: 3rem;
      padding-right: 3rem;
    }
  }
}

.testimonials-swiper {
  // border: 1px solid red;
  overflow: hidden;

  .swiper {
    // border: 3px solid blue;
    width: 80%;
    margin: auto;
    overflow-x: visible;
    position: relative;

    // padding-bottom: 3rem;

    .swiper-wrapper {
      // border: 3px solid green;

      display: flex;
      align-items: center;

      .swiper-slide {
        position: relative;

        display: flex;
        flex-direction: column;

        background: #fff;
        width: 297px;
        height: 367px;
        opacity: 0.5;

        padding: 0.2rem;
        border-radius: 20px;

        img {
          border-top-left-radius: 16px;
          border-top-right-radius: 16px;
        }
        .desc {
          flex-grow: 1;
          background: linear-gradient(
            90deg,
            rgba(253, 176, 34, 0.45) 20.17%,
            rgba(252, 185, 61, 0) 90.04%
          );
          padding: 1rem;
          border-bottom-left-radius: 16px;
          border-bottom-right-radius: 16px;
        }

        &.swiper-slide-active {
          width: 391px;
          height: 427px;
          opacity: 1;
          padding: 0.5rem;
          border: 1px solid #fff;

          // box-shadow: 8px 10px 16px 0px rgba(0, 0, 0, 0.05);
          // backdrop-filter: blur(6px);

          img {
            border-radius: 16px;
          }
          .desc {
            z-index: -1;
            position: absolute;
            height: 60%;
            width: 95%;
            bottom: 10px;
            padding-top: 2rem;
          }
        }
      }
    }

    .swiper-button-prev,
    .swiper-button-next {
    }
  }
}

.custom-swiper-controls {
  border: 1px solid white;
  position: absolute;
  width: 100%;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  // transform: scaleX(2);

  display: flex;
  justify-content: center;
  gap: 2rem;

  @media screen and (max-width: 768px) {
    display: none;
  }
}

footer {
  ::placeholder {
    font-weight: bold;
    color: #667085;
  }

  .our-processes {
    img {
      transform: scale(1.1);
    }
  }
  .mob-footer-nav {
    @media screen and (max-width: 800px) {
      grid-template-columns: repeat(2, 1fr);
    }
  }
}

.local-steps {
  background: linear-gradient(273deg, #000 26.59%, rgba(0, 0, 0, 0) 94.7%),
    url("../public/icons/local-bg.png") no-repeat;
  background-size: cover;
}
.steps-desc {
  background: linear-gradient(
    270deg,
    rgba(255, 255, 255, 0.5) 8.03%,
    #fff 57.24%
  );
}
.intl-steps {
  background: linear-gradient(
      270deg,
      rgba(255, 255, 255, 0.5) 8.03%,
      #fff 57.24%
    ),
    url("../public/icons/intl-bg.png") no-repeat;
  background-size: cover;
}

